Bug 1734243 - Part 2: Implement ReadableStream#pipeThrough r=mgaudet,evilpie,emilio
Differential Revision: https://phabricator.services.mozilla.com/D139506

UltraBlame original commit: c5a25a5870f1624f6d02cfbf6a26a00715d6ccdd

--- a/testing/web-platform/meta/streams/idlharness.any.js.ini
+++ b/testing/web-platform/meta/streams/idlharness.any.js.ini
@@ -70,7 +70,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: new ReadableStream() must inherit property "pipeThrough(ReadableWritablePair, optional StreamPipeOptions)" with the proper type]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [WritableStreamDefaultController interface: self.writableStreamDefaultController must inherit property "error(optional any)" with the proper type]
     expected:
@@ -160,7 +161,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: operation pipeThrough(ReadableWritablePair, optional StreamPipeOptions)]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [ReadableStreamBYOBReader interface: attribute closed]
     expected:
@@ -554,7 +556,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: calling pipeThrough(ReadableWritablePair, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [ReadableStreamDefaultReader interface: existence and properties of interface prototype object]
     expected:
@@ -744,7 +747,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: new ReadableStream() must inherit property "pipeThrough(ReadableWritablePair, optional StreamPipeOptions)" with the proper type]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [WritableStreamDefaultController interface: self.writableStreamDefaultController must inherit property "error(optional any)" with the proper type]
     expected:
@@ -834,7 +838,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: operation pipeThrough(ReadableWritablePair, optional StreamPipeOptions)]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [ReadableStreamBYOBReader interface: attribute closed]
     expected:
@@ -1228,7 +1233,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: calling pipeThrough(ReadableWritablePair, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [ReadableStreamDefaultReader interface: existence and properties of interface prototype object]
     expected:
@@ -1418,7 +1424,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: new ReadableStream() must inherit property "pipeThrough(ReadableWritablePair, optional StreamPipeOptions)" with the proper type]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [WritableStreamDefaultController interface: self.writableStreamDefaultController must inherit property "error(optional any)" with the proper type]
     expected:
@@ -1508,7 +1515,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: operation pipeThrough(ReadableWritablePair, optional StreamPipeOptions)]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [ReadableStreamBYOBReader interface: attribute closed]
     expected:
@@ -1902,7 +1910,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: calling pipeThrough(ReadableWritablePair, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [ReadableStreamDefaultReader interface: existence and properties of interface prototype object]
     expected:
@@ -2092,7 +2101,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: new ReadableStream() must inherit property "pipeThrough(ReadableWritablePair, optional StreamPipeOptions)" with the proper type]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [WritableStreamDefaultController interface: self.writableStreamDefaultController must inherit property "error(optional any)" with the proper type]
     expected:
@@ -2182,7 +2192,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: operation pipeThrough(ReadableWritablePair, optional StreamPipeOptions)]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [ReadableStreamBYOBReader interface: attribute closed]
     expected:
@@ -2576,7 +2587,8 @@
       if not domstreams: FAIL
 
   [ReadableStream interface: calling pipeThrough(ReadableWritablePair, optional StreamPipeOptions) on new ReadableStream() with too few arguments must throw TypeError]
-    expected: FAIL
+    expected:
+      if not domstreams: FAIL
 
   [ReadableStreamDefaultReader interface: existence and properties of interface prototype object]
     expected:
