Bug 1755053 - wasm: Remove consumePendingException builtin and just load/store the relevant fields. r=lth
There is a Instance::consumePendingException builtin which:
  1. Sets TlsData::pendingException to nullptr
  2. Does a linear search for the local tag index and returns that

We remove this builtin by:
  1. Moving the linear search to wasm::HandleThrow and stores the
     result in TlsData::pendingExceptionTagIndex
  2. Clear the TlsData fields to UINT32/0 in JIT code

Differential Revision: https://phabricator.services.mozilla.com/D138574

UltraBlame original commit: c86da941d87c46e9252afc4fd6eaa16bb80fe70d

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -2540,6 +2540,9 @@
 - name: WasmLoadTls
   gen_boilerplate: false
 
+- name: WasmStoreTls
+  gen_boilerplate: false
+
 - name: WasmHeapBase
   gen_boilerplate: false
 
