Bug 1755053 - wasm: Store WasmExceptionObject payload in manually managed data buffer. r=lth
This commit replaces the reference segregated method of storing
exception payload, with a unified manually managed data buffer.

This is accomplished by:
  1. Removing the stored ArrayBufferObject and ArrayObject in WasmExceptionObject
  2. Manually allocating a data buffer and storing it as a PrivateValue()
  3. Switch TagType to be reference counted
  4. Share TagType between WasmTagObject and WasmExceptionObject
    - This is so the tag type can be used safely for tracing. The tag object
      may be moved while tracing, and cannot be used.
  5. Add a trace method to WasmExceptionObject
  6. Add loadValue/storeValue to WasmExceptionObject, relying on
     ToWebAssemblyValue and ToJSValue
  7. Rework baseline to load/store directly from the data pointer of
     the exception object
  8. Remove the MIR/LIR for handling the old reference area of exceptions
  9. Rework the MIR/LIR to support reading/writing wasm values to a data pointer
     that is owned by a GC object. This uses the keepalive LUse policy used by
     JS to avoid rooting hazards. This replaces the previous ad-hoc uses of
     setGuard().
  10. Remove the pushRefIntoExn builtin, as it's not needed

Differential Revision: https://phabricator.services.mozilla.com/D138580

UltraBlame original commit: 791d8f5961944f3e1ecd5b89b8183b2badd063ca

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -2731,17 +2731,14 @@
 - name: IonToWasmCall
   gen_boilerplate: false
 
-- name: WasmExceptionDataPointer
+- name: WasmLoadObjectField
   gen_boilerplate: false
 
-- name: WasmLoadExceptionDataValue
+- name: WasmLoadObjectDataField
   gen_boilerplate: false
 
-- name: WasmStoreExceptionDataValue
+- name: WasmStoreObjectDataField
   gen_boilerplate: false
 
-- name: WasmExceptionRefsPointer
-  gen_boilerplate: false
-
-- name: WasmLoadExceptionRefsValue
+- name: WasmStoreObjectDataRefField
   gen_boilerplate: false
