--- a/toolkit/mozapps/extensions/test/xpcshell/xpcshell.ini
+++ b/toolkit/mozapps/extensions/test/xpcshell/xpcshell.ini
@@ -57,6 +57,7 @@ skip-if = appname != "firefox" || (os == "win" && processor == "aarch64") # bug 
 [test_installtrigger_schemes.js]
 [test_isDebuggable.js]
 [test_isReady.js]
+[test_loadManifest_isPrivileged.js]
 [test_locale.js]
 [test_moved_extension_metadata.js]
 skip-if = true
