--- a/toolkit/mozapps/extensions/test/xpcshell/xpcshell.ini
+++ b/toolkit/mozapps/extensions/test/xpcshell/xpcshell.ini
@@ -165,6 +165,7 @@ skip-if = os == "win" # Bug 1358846
 head = head_addons.js head_compat.js
 [test_update_ignorecompat.js]
 skip-if = true # Bug 676922 Bug 1437697
+[test_update_isPrivileged.js]
 [test_update_noSystemAddonUpdate.js]
 head = head_addons.js head_system_addons.js
 [test_update_strictcompat.js]
