Bug 1734987 - Part 4: Make addon.isPrivileged consistent with extension.isPrivileged r=rpl
addon.isPrivileged and extension.isPrivileged are currently almost
identical, except in the case of temporary extensions when experiments
are enabled.

This difference is inexplicable for those unfamiliar with the history,
so this patch makes them identical.

addon.isPrivileged was introduced in bug 1543204 to support hidden
add-ons, which was intended to be used by privileged add-ons only.
Hence, this patch updates the "hidden" getter to continue ignoring the
hidden flag for temporary add-ons.

With this change, the addon.isPrivileged check can be removed from
loadManifestFromWebManifest, in favor of checking extension.isPrivileged
at the location where addon.hidden is initialized for the first (and now
only) time.

BootstrapScope.callBootstrapMethod can now also use addon.isPrivileged
instead of invoking the ExtensionData.getIsPrivileged helper.

Differential Revision: https://phabricator.services.mozilla.com/D128233

UltraBlame original commit: ab302ff25a5fc64045154af4fd670065e4ce5d5f

--- a/toolkit/mozapps/extensions/test/xpcshell/xpcshell.ini
+++ b/toolkit/mozapps/extensions/test/xpcshell/xpcshell.ini
@@ -110,6 +110,7 @@ skip-if = require_signing || !allow_legacy_extensions
 head = head_addons.js head_sideload.js
 skip-if = os == "linux" # Bug 1613268
 [test_startup_enable.js]
+[test_startup_isPrivileged.js]
 [test_startup_scan.js]
 head = head_addons.js head_sideload.js
 [test_strictcompatibility.js]
