--- a/devtools/client/netmonitor/test/browser.ini
+++ b/devtools/client/netmonitor/test/browser.ini
@@ -28,6 +28,7 @@ support-files =
   html_json-long-test-page.html
   html_json-malformed-test-page.html
   html_json-text-mime-test-page.html
+  html_json-xssi-protection.html
   html_jsonp-test-page.html
   html_maps-test-page.html
   html_navigate-test-page.html
@@ -195,6 +196,7 @@ skip-if = verify # Bug 1607678
 [browser_net_json-nogrip.js]
 [browser_net_json_custom_mime.js]
 [browser_net_json_text_mime.js]
+[browser_net_json-xssi-protection.js]
 [browser_net_jsonp.js]
 [browser_net_large-response.js]
 [browser_net_leak_on_tab_close.js]
