Bug 1734174 - Remove unneeded implicitJSContext from ReadableStream::GetReader() r=mgaudet
Depends on D139872

Differential Revision: https://phabricator.services.mozilla.com/D139873

UltraBlame original commit: 9b89aba4d3ffa362b4a68d78fc21ba70b1e49294

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -686,7 +686,7 @@ DOMInterfaces = {
 },
 
 'ReadableStream': {
-    'implicitJSContext': ['getReader', 'tee'],
+    'implicitJSContext': ['tee'],
 },
 
 'ReadableStreamBYOBRequest': {
