--- a/testing/raptor/raptor/tests/tp6/desktop/browsertime-tp6.ini
+++ b/testing/raptor/raptor/tests/tp6/desktop/browsertime-tp6.ini
@@ -92,9 +92,8 @@ secondary_url = https://docs.google.com/document/d/1vUnn0ePU-ynArE1OdxyEHXR2G0sl
 test_url = https://docs.google.com/presentation/d/1Ici0ceWwpFvmIb3EmKeWSq_vAQdmmdFcWqaiLqUkJng/edit?usp=sharing
 
 [imdb]
-playback_pageset_manifest = mitm5-linux-firefox-imdb.manifest
-playback_version = 5.1.1
 test_url = https://www.imdb.com/title/tt0084967/?ref_=nv_sr_2
+secondary_url=  https://www.imdb.com/title/tt0084967/episodes/?ref_=tt_ov_epl
 
 [imgur]
 playback_pageset_manifest = mitm7-linux-firefox-imgur.manifest
