Bug 1756979 - Enable  strict-trr-fallback on nightly, r=necko-reviewers,valentin
Differential Revision: https://phabricator.services.mozilla.com/D139585

UltraBlame original commit: 4005ce3ab973cdc10b0f9f1a5a8964cb43a17c50

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -10289,7 +10289,7 @@
 # If true, don't fallback to native DNS upon network errors.
 - name: network.trr.strict_native_fallback
   type: RelaxedAtomicBool
-  value: false
+  value: @IS_NIGHTLY_BUILD@
   mirror: always
 
 # If true, we'll fallback to native if the retry also times out.
