--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -3010,11 +3010,11 @@ installation:
       silent: '(optional, present if object is "full") Whether this was a silent install'
       from_msi: '(optional, present if object is "full") Whether this was an MSI install'
       default_path: '(optional, present if object is "full") Whether the default path was used'
-    bug_numbers: [1660198, 1725295, 1743465]
+    bug_numbers: [1660198, 1725295, 1743465, 1754638]
     notification_emails:
       - application-update-telemetry-alerts@mozilla.com
       - rtestard@mozilla.com
-    expiry_version: "100"
+    expiry_version: never
 
 contextservices.quicksuggest:
   data_collect_toggled:
