--- a/testing/web-platform/meta/html/browsers/browsing-the-web/back-forward-cache/events.html.ini
+++ b/testing/web-platform/meta/html/browsers/browsing-the-web/back-forward-cache/events.html.ini
@@ -1,8 +1,9 @@
 [events.html]
-  prefs: [docshell.shistory.bfcache.ship_allow_beforeunload_listeners:true]
   [beforeunload]
     expected:
-      if not sessionHistoryInParent: PRECONDITION_FAILED
+      if os == "android": PASS
+      PRECONDITION_FAILED
+
   [unload]
     expected:
       if os == "android": PASS
