Bug 1638466 - Enable out-of-process WebGL on Linux. r=jgilbert
Differential Revision: https://phabricator.services.mozilla.com/D138612

UltraBlame original commit: 1c322856010d08a9d7e9acbf89da2ea2a57b96e7

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -12518,7 +12518,9 @@
 
 - name: webgl.out-of-process
   type: RelaxedAtomicBool
-#if defined(XP_MACOSX) || defined(XP_WIN)
+# (When reading the next line, know that preprocessor.py doesn't
+# understand parentheses, but && is higher precedence than ||.)
+#if defined(XP_MACOSX) || defined(XP_WIN) || defined(XP_LINUX) && !defined(MOZ_WIDGET_ANDROID)
   value: true
 #else
   value: false
