Bug 1756618 - adjust treeherder group names description to be more specific. r=gbrown
Differential Revision: https://phabricator.services.mozilla.com/D139885

UltraBlame original commit: 8ba34d775148c42f7d3f62943d039ecbb4844e93

--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -50,9 +50,9 @@ treeherder:
         'M-headless-spi-nw-nofis': 'Headless Mochitests with fission and socketprocess networking without fission enabled.'
         'M-aab': 'Mochitests with AAB test_runner.'
         'M-aab-nofis': 'Mochitests with AAB test_runner without fission enabled.'
-        'M-1proc': 'Mochitests without e10s'
+        'M-1proc': 'Mochitests without e10s or fission'
         'M-a11y-checks': 'Mochitests with accessibility checks enabled'
-        'M-a11y-checks-nofis': 'Mochitests with accessibility checks enabled and fission not enabled'
+        'M-a11y-checks-nofis': 'Mochitests with accessibility checks enabled and without fission enabled'
         'M-a11y-checks-fis': 'Mochitests with accessibility checks enabled and fission enabled'
         'M-dfpi': 'Mochitests with dFPI enabled'
         'M-dfpi-1proc': 'Mochitests with dFPI enabled and no fission or e10s'
@@ -77,15 +77,15 @@ treeherder:
         'M-swr-a11y-checks-fis': 'Mochitests with software webrender and accessibility checks enabled and fission'
         'M-swr-a11y-checks-nofis': 'Mochitests with software webrender and accessibility checks enabled without fission enabled'
         'M-swr-1proc': 'Mochitests with software webrender enabled without e10s'
-        'M-swr-fis': 'Mochitests with software webrender and fission enabled'
-        'M-swr-nofis': 'Mochitests with software webrender and fission not enabled'
+        'M-swr-fis': 'Mochitests with software webrender with fission enabled'
+        'M-swr-nofis': 'Mochitests with software webrender without fission enabled'
         'M-swr-wayland': 'Mochitests with software webrender and Wayland backend enabled'
         'M-wayland': 'Mochitests with Wayland backend enabled'
         'M-wayland-1proc': 'Mochitests with Wayland backend enabled without e10s'
         'M-f': 'Mochitest failures'
         'M-f-1proc': 'Mochitest failures without e10s'
         'M-f-fis': 'Mochitest failures with fission enabled'
-        'M-f-fis-xorig': 'Mochitest failures with cross-origin and fission enabled'
+        'M-f-fis-xorig': 'Mochitest failures with cross-origin with fission enabled'
         'M-f-gli': 'Mochitest failures with WebGL over IPC'
         'M-f-spi': 'Mochitest failures with socket process'
         'M-f-spi-1proc': 'Mochitest failures with socket process without e10s'
@@ -94,17 +94,17 @@ treeherder:
         'M-f-swr': 'Mochitests failures with software webrender enabled'
         'M-f-swr-1proc': 'Mochitests failures with software webrender enabled without e10s'
         'M-f-wayland': 'Mochitests failures with Wayland backend enabled'
-        'M-dt-no-eft-nofis': 'DevTools Mochitests with EFT and Fission disabled'
+        'M-dt-no-eft-nofis': 'DevTools Mochitests with EFT without fission enabled'
         'MSI': 'Repack installers into MSIs'
         'MSIs': 'Signing of Repacked installers of MSIs'
         'MSIX': 'Repack into MSIX package'
         'MSIXs': 'Signing of Repack into MSIX package'
         'R': 'Reftests'
         'R-fis': 'Reftests with fission enabled'
-        'R-nofis': 'Reftests with fission enabled'
+        'R-nofis': 'Reftests without fission enabled'
         'R-swr': 'Reftests with software webrender enabled'
-        'R-swr-nofis': 'Reftests with software webrender enabled'
-        'R-swr-fis': 'Reftests with software webrender and fission enabled'
+        'R-swr-nofis': 'Reftests with software webrender enabled without fission enabled'
+        'R-swr-fis': 'Reftests with software webrender with fission enabled'
         'R-wayland': 'Reftests with Wayland backend enabled'
         'Rap': 'Raptor performance tests on Firefox'
         'Rap-live': 'Raptor performance tests on Firefox with live sites'
@@ -133,10 +133,10 @@ treeherder:
         'W': 'Web platform tests'
         'W-dfpi-fis': 'Web platform tests with dFPI and Fission enabled'
         'W-fis': 'Web platform tests with fission enabled'
-        'W-nofis': 'Web platform tests with fission enabled'
-        'W-headless-nofis': 'Headless web platform tests'
+        'W-nofis': 'Web platform tests without fission enabled'
+        'W-headless-nofis': 'Headless web platform tests without fission enabled'
         'W-headless-fis': 'Headless web platform tests with fission enabled'
-        'W-swr-nofis': 'Web platform tests with software webrender enabled'
+        'W-swr-nofis': 'Web platform tests with software webrender enabled without fission enabled'
         'W-swr-fis': 'Web platform tests with software webrender enabled'
         'W-b': 'Web platform tests (backlog)'
         'W-b-fis': 'Web platform tests (backlog) with fission enabled'
