Bug 1757647 - Implement Windows 11 overlay scrollbars. r=cmartin
Put it behind a pref for nightly and early beta for now.

Differential Revision: https://phabricator.services.mozilla.com/D139987

UltraBlame original commit: 21553c91b278c428b4c8e861602a99fb1c1acc70

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -12939,6 +12939,13 @@
   value: true
   mirror: always
 
+# Whether overlay scrollbars respect the system settings.
+# Note that these can be overridden by the ui.useOverlayScrollbars pref.
+- name: widget.windows.overlay_scrollbars.enabled
+  type: bool
+  value: @IS_EARLY_BETA_OR_EARLIER@
+  mirror: always
+
 - name: widget.windows.window_occlusion_tracking_display_state.enabled
   type: bool
   value: false
