--- a/toolkit/content/tests/chrome/chrome.ini
+++ b/toolkit/content/tests/chrome/chrome.ini
@@ -103,6 +103,7 @@ skip-if = toolkit == "cocoa"
 [test_button.xhtml]
 [test_closemenu_attribute.xhtml]
 [test_contextmenu_list.xhtml]
+[test_contextmenu_rtl.xhtml]
 [test_custom_element_base.xhtml]
 [test_custom_element_delay_connection.xhtml]
 [test_custom_element_parts.html]
