Bug 1757608 - Disable WritableStreams WPT tests if testing JS Streams r=saschanaz
Differential Revision: https://phabricator.services.mozilla.com/D139992

UltraBlame original commit: 6393a0a377928abdd50577d606743269692e91a5

--- a/testing/web-platform/meta/streams/writable-streams/__dir__.ini
+++ b/testing/web-platform/meta/streams/writable-streams/__dir__.ini
@@ -1,1 +1,2 @@
-prefs: [javascript.options.writable_streams:true]
+disabled:
+  if not domstreams: https://bugzilla.mozilla.org/show_bug.cgi?id=1755391
