--- a/taskcluster/gecko_taskgraph/test/python.ini
+++ b/taskcluster/gecko_taskgraph/test/python.ini
@@ -29,5 +29,6 @@ subsuite = taskgraph
 [test_util_runnable_jobs.py]
 [test_util_schema.py]
 [test_util_templates.py]
+[test_util_time.py]
 [test_util_treeherder.py]
 [test_util_verify.py]
