Bug 1757699 - Disable test_delazification_strategy when code coverage is enabled. r=arai
Differential Revision: https://phabricator.services.mozilla.com/D140059

UltraBlame original commit: 5310faea8c017346ddb6c00adb2fe9e7e8c229a6

--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -756,7 +756,7 @@ support-files =
   file_js_cache_syntax_error.html
   file_js_cache_syntax_error.js
 [test_delazification_strategy.html]
-skip-if = verify
+skip-if = (verify || ccov)
 support-files =
   file_delazification_strategy.html
   file_delazification_strategy.js
