Bug 1750787 - get CRLite enrollment list from cert-revocations. r=keeler
Differential Revision: https://phabricator.services.mozilla.com/D139728

UltraBlame original commit: 4000eb2cd181169c6952b47362ccd3ab403cca2b

--- a/security/manager/ssl/tests/unit/xpcshell.ini
+++ b/security/manager/ssl/tests/unit/xpcshell.ini
@@ -106,6 +106,8 @@ tags = remote-settings psm
 [test_crlite_preexisting.js]
 [test_crlite_filter_corrupted.js]
 [test_crlite_stash_corrupted.js]
+[test_crlite_enrollment_version.js]
+[test_crlite_enrollment_trunc1.js]
 [test_crlite_coverage_version.js]
 [test_crlite_coverage_trunc1.js]
 [test_crlite_coverage_trunc2.js]
