Bug 1331109 - Enable GPU process on Android. r=gfx-reviewers,aosmond
Differential Revision: https://phabricator.services.mozilla.com/D138144

UltraBlame original commit: 4d8f7af7950c95218be71e2ba65439452bf67b2f

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6971,7 +6971,7 @@
 
 - name: layers.gpu-process.enabled
   type: bool
-#if defined(XP_WIN)
+#if defined(XP_WIN) || defined(MOZ_WIDGET_ANDROID)
   value: true
 #else
   value: false
