--- a/devtools/client/debugger/test/mochitest/browser.ini
+++ b/devtools/client/debugger/test/mochitest/browser.ini
@@ -67,6 +67,9 @@ skip-if = os == "win"
 [browser_dbg-dom-mutation-breakpoints-fission.js]
 [browser_dbg-dom-mutation-breakpoints.js]
 [browser_dbg-scopes.js]
+[browser_dbg-backgroundtask-debugging.js]
+skip-if =
+  asan # Bug 1591064
 [browser_dbg-chrome-create.js]
 skip-if = (verify && !debug && (os == 'linux'))
 [browser_dbg-command-click.js]
