--- a/.eslintignore
+++ b/.eslintignore
@@ -74,6 +74,7 @@ devtools/client/preferences/
 devtools/shared/css/generated/properties-db.js
 devtools/client/webconsole/test/node/fixtures/stubs/*.js
 !devtools/client/webconsole/test/node/fixtures/stubs/index.js
+devtools/client/shared/components/test/node/stubs/reps/*.js
 
 # Ignore devtools files testing sourcemaps / code style
 devtools/client/framework/test/code_*
