Bug 1757658 - Record Nimbus exposure event for best match. r=nanj,k88hudson
This modifies the Nimbus exposure event logic for users in the
`firefox-suggest-best-match` experiment so that the event is recorded the first
time a best match is shown (or would have been shown). For all other users,
there's no change: The event is recorded the first time a Suggest suggestion is
shown.

Depends on D139452, D139576

Differential Revision: https://phabricator.services.mozilla.com/D139995

UltraBlame original commit: 23690d40d594cbb2256209cca1fb8f084ca581ae

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -30,13 +30,17 @@ urlbar:
   description: The Address Bar
   hasExposure: true
   exposureDescription: >-
-    Exposure is sent once per browsing session after the first urlbar query is
-    made.
+    The timing of the exposure event depends on the experiment, but generally
+    the event is recorded once per app session when the user first encounters
+    the UI of the experiment in which they're enrolled.
   variables:
     bestMatchEnabled:
       type: boolean
       fallbackPref: browser.urlbar.bestMatch.enabled
       description: Gate for the best match feature. If false, the best match preferences UI and best match suggestions will not be shown. If true, the preferences UI will be shown, and the user can turn best match suggestions on or off.
+    isBestMatchExperiment:
+      type: boolean
+      description: Whether the experiment (or rollout) is related to best match. If true, then the Nimbus exposure event will be recorded when the user first triggers a best match (or would have triggered a best match, for users in the control group). If false, the event will be recorded when the user first triggers any type of Suggest suggestion.
     merinoClientVariants:
       type: string
       fallbackPref: browser.urlbar.merino.clientVariants
