Bug 1755761 - Handle actions from multistage Spotlight r=Mardak
Differential Revision: https://phabricator.services.mozilla.com/D139650

UltraBlame original commit: 9279a5bee56fd8e647ce3dc5c10cc250affef6da

--- a/browser/components/newtab/test/browser/browser.ini
+++ b/browser/components/newtab/test/browser/browser.ini
@@ -46,6 +46,7 @@ support-files=
 [browser_highlights_section.js]
 [browser_discovery_card.js]
 [browser_getScreenshots.js]
+[browser_multistage_spotlight.js]
 [browser_newtab_overrides.js]
 [browser_newtab_header.js]
 [browser_newtab_last_LinkMenu.js]
