--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -124,9 +124,12 @@ aboutprivatebrowsing:
     record_in_processes: ["content"]
     description: >
       This is recorded when a user clicks a link on the private browsing newtab.
-    bug_numbers: [1709344]
-    notification_emails: ["dmosedale@mozilla.com", "omc@mozilla.com"]
-    expiry_version: "100"
+    bug_numbers: [1709344, 1754635]
+    notification_emails:
+      - "dmosedale@mozilla.com"
+      - "barret@mozilla.com"
+      - "omc@mozilla.com"
+    expiry_version: "106"
     products:
       - "firefox"
 
