Bug 1651609 - Allow ESC key to exit picture-in-picture fullscreen mode. r=pip-reviewers,mhowell
This fix handles the ESC key in 2 ways:
- first when the PiP is in fullscreen mode, it would just leave the fullscreen mode
- second when the PiP is not in fullscreen mode, it would handle it as same as pressing the close button of the PiP player
- introduced a dedicated test for handling the ESC key for fullscreen and non fullscreen modes

Differential Revision: https://phabricator.services.mozilla.com/D139621

UltraBlame original commit: 490a77231596c7a0d12ddc40118bc0c7e94d71b4

--- a/toolkit/components/pictureinpicture/tests/browser.ini
+++ b/toolkit/components/pictureinpicture/tests/browser.ini
@@ -57,6 +57,7 @@ skip-if =
 skip-if = (os == "mac" && debug) || os == "linux" #Bug 1566173, Bug 1664667
 [browser_keyboardShortcut.js]
 [browser_keyboardShortcutClosePIP.js]
+[browser_keyboardClosePIPwithESC.js]
 [browser_keyboardShortcutWithNanDuration.js]
 support-files =
   test-page-with-nan-video-duration.html
