Backed out 2 changesets (bug 1756505) for causing hazard failures. CLOSED TREE
Backed out changeset 3622bb57fb67 (bug 1756505)
Backed out changeset d0e31f4a0ee1 (bug 1756505)

UltraBlame original commit: 23b93818145a47dea75de0627b4949d508e33659

--- a/toolkit/crashreporter/CrashAnnotations.yaml
+++ b/toolkit/crashreporter/CrashAnnotations.yaml
@@ -891,6 +891,11 @@ TextureUsage:
   type: string
   ping: true
 
+ThreadIdNameMapping:
+  description: >
+    List of thread names with their corresponding thread IDs.
+  type: string
+
 TotalPageFile:
   description: >
     Maximum amount of memory that can be committed without extending the swap/page file.
