Bug 1631178 - Update wpt expectations in webrtc-extensions/RTCRtpSynchronizationSource-senderCaptureTimeOffset.html.ini. r=test-fix
UltraBlame original commit: 3dac5cfdfc065afa169047cbaa23bb35c81573b1

--- a/testing/web-platform/meta/webrtc-extensions/RTCRtpSynchronizationSource-senderCaptureTimeOffset.html.ini
+++ b/testing/web-platform/meta/webrtc-extensions/RTCRtpSynchronizationSource-senderCaptureTimeOffset.html.ini
@@ -2,6 +2,7 @@
   expected:
     if fission and (os == "linux") and not debug: [OK, TIMEOUT]
     if fission and (os == "win") and not debug: [OK, TIMEOUT]
+    TIMEOUT
   [[audio\] getSynchronizationSources() should contain senderCaptureTimeOffset if absolute capture time RTP header extension is negotiated]
     expected:
       if fission and (os == "linux") and not debug: [FAIL, NOTRUN]
@@ -12,13 +13,13 @@
     expected:
       if fission and (os == "win") and not debug: [FAIL, NOTRUN]
       if fission and (os == "linux") and not debug: [FAIL, NOTRUN]
-      FAIL
+      NOTRUN
 
   [Audio and video RTCRtpSynchronizationSource.senderCaptureTimeOffset must be zero]
     expected:
       if fission and (os == "win") and not debug: [FAIL, NOTRUN]
       if fission and (os == "linux") and not debug: [FAIL, NOTRUN]
-      FAIL
+      NOTRUN
 
   [[audio\] getSynchronizationSources() should not contain senderCaptureTimeOffset if absolute capture time RTP header extension is not offered]
     expected:
@@ -29,11 +30,13 @@
     expected:
       if fission and (os == "win") and not debug: [PASS, NOTRUN]
       if fission and (os == "linux") and not debug: [PASS, NOTRUN]
+      NOTRUN
 
   [[video\] getSynchronizationSources() should not contain senderCaptureTimeOffset if absolute capture time RTP header extension is not offered]
     expected:
-      if fission and (os == "linux") and not debug: [PASS, NOTRUN]
+      if fission and (os == "linux") and not debug: [TIMEOUT, PASS, NOTRUN]
       if fission and (os == "win") and not debug: [PASS, NOTRUN]
+      TIMEOUT
 
   [[audio\] getSynchronizationSources() should not contain senderCaptureTimeOffset if absolute capture time RTP header extension is offered, but not answered]
     expected:
