Bug 1757898 - Mark OffscreenCanvas transferToImageBitmap WebGL tests as failing on 32-bit Linux. r=gfx-reviewers,jgilbert
Differential Revision: https://phabricator.services.mozilla.com/D140215

UltraBlame original commit: 263c93f28cf7879479f333b3a3cdd4b919ec001c

--- a/testing/web-platform/meta/html/canvas/offscreen/manual/the-offscreen-canvas/offscreencanvas.transfer.to.imagebitmap.html.ini
+++ b/testing/web-platform/meta/html/canvas/offscreen/manual/the-offscreen-canvas/offscreencanvas.transfer.to.imagebitmap.html.ini
@@ -5,3 +5,6 @@
   [Test that transferToImageBitmap won't change context's property]
     expected: FAIL
 
+  [Test that transferToImageBitmap returns an ImageBitmap with correct width and height]
+    expected:
+      if (processor == "x86") and (os == "linux"): FAIL
