--- a/testing/web-platform/meta/html/canvas/offscreen/manual/the-offscreen-canvas/offscreencanvas.transfer.to.imagebitmap.w.html.ini
+++ b/testing/web-platform/meta/html/canvas/offscreen/manual/the-offscreen-canvas/offscreencanvas.transfer.to.imagebitmap.w.html.ini
@@ -5,3 +5,6 @@
   [Test that transferToImageBitmap won't change context's property in a worker]
     expected: FAIL
 
+  [Test that transferToImageBitmap returns an ImageBitmap with correct width and height in a worker]
+    expected:
+      if (processor == "x86") and (os == "linux"): FAIL
