--- a/docshell/test/browser/browser.ini
+++ b/docshell/test/browser/browser.ini
@@ -200,6 +200,8 @@ https_first_disabled = true
 [browser_browsingContext-getWindowByName.js]
 [browser_browsingContext-embedder.js]
 [browser_browsingContext-webProgress.js]
+skip-if =
+  os == "linux" && bits == 64 && !debug # Bug 1721261
 https_first_disabled = true
 [browser_csp_uir.js]
 support-files =
