--- a/remote/shared/messagehandler/test/browser/browser.ini
+++ b/remote/shared/messagehandler/test/browser/browser.ini
@@ -18,3 +18,4 @@ prefs =
 [browser_session_data_broadcast.js]
 [browser_session_data_browser_element.js]
 [browser_session_data_constructor_race.js]
+[browser_windowglobal_domcontentloaded.js]
