Bug 1758087: Add about:doherror to inform the user that the DoH connection has failed. r=Gijs,fluent-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D140311

UltraBlame original commit: 2adaaea4fb766546006f12e270f3d6e8b1e1c39e

--- a/browser/components/doh/test/browser/browser.ini
+++ b/browser/components/doh/test/browser/browser.ini
@@ -5,6 +5,7 @@ head = head.js
 skip-if = socketprocess_networking
 [browser_dirtyEnable.js]
 [browser_doorhangerUserReject.js]
+[browser_errorPage.js]
 [browser_localStorageMigration.js]
 [browser_NextDNSMigration.js]
 [browser_policyOverride.js]
