--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -10551,6 +10551,12 @@
   value: false
   mirror: always
 
+# Whether to show an error in strict mode
+- name: network.trr.show_error_page
+  type: bool
+  value: false
+  mirror: always
+
 # Allow the network changed event to get sent when a network topology or setup
 # change is noticed while running.
 - name: network.notify.changed
