Bug 1748714 - Generate multiple webidl method signatures on JSONSchema optional parameters followed by a mandatory one. r=robwu
Differential Revision: https://phabricator.services.mozilla.com/D135419

UltraBlame original commit: 4896da925e832987cddee66467719ca9f1d65edb

--- a/toolkit/components/extensions/webidl-api/ExtensionWebIDL.conf
+++ b/toolkit/components/extensions/webidl-api/ExtensionWebIDL.conf
@@ -41,6 +41,18 @@ WEBEXT_TYPES_MAPPING = {
 
 
 
+WEBIDL_PRIMITIVE_TYPES = set([
+    "DOMString",
+    "boolean",
+    "float"
+    "long",
+])
+
+
+
+
+
+
 
 
 
