Bug 1748714 - Add configuration to hide API methods in WebIDL ExtensionAPI definitions GenerateWebIDLBindings creates based on the JSONSchema data. r=robwu
Currently only used to hide browser.runtime.getFrameID, which isn't going to be usable
in a background service worker anyway and it is not deprecated in MV3.

Differential Revision: https://phabricator.services.mozilla.com/D136951

UltraBlame original commit: a94f5b8ebdaaeb85eccc130647743276b3864436

--- a/toolkit/components/extensions/webidl-api/ExtensionWebIDL.conf
+++ b/toolkit/components/extensions/webidl-api/ExtensionWebIDL.conf
@@ -69,6 +69,10 @@ WEBEXT_STUBS_MAPPING = {
     "test.withHandlingUserInput": "NotImplementedNoReturn",
 }
 
+WEBEXT_WORKER_HIDDEN_SET = set([
+    "runtime.getFrameId",
+])
+
 
 
 WEBEXT_SCHEMADIRS_MAPPING = {
