--- a/supply-chain/config.toml
+++ b/supply-chain/config.toml
@@ -80,8 +80,8 @@ audit-as-crates-io = false
 notes = "This override is an api-compatible fork with an orthogonal implementation."
 
 [policy.marionette]
-audit-as-crates-io = true
-notes = "This is a first-party crate which is also published to crates.io, but we should publish audits for it for the benefit of the ecosystem."
+audit-as-crates-io = false
+notes = "This is a first-party crate which is also published to crates.io. We certify audits for this crate as part of the documented release process, but that step happens after the version bump lands on central so we don't enforce it here."
 
 [policy.midir]
 audit-as-crates-io = true
