--- a/dom/workers/test/browser.ini
+++ b/dom/workers/test/browser.ini
@@ -33,3 +33,4 @@ support-files =
 support-files =
   WorkerDebugger.initialize_debugger_es_worker.js
   WorkerDebugger.initialize_es_worker.js
+fail-if = !nightly # to be enable once ES module in workers is enabled (bug 1812591)
