--- a/.eslintignore
+++ b/.eslintignore
@@ -87,6 +87,12 @@ devtools/client/webconsole/test/browser/code_bundle_nosource.js
 devtools/client/webconsole/test/browser/code_bundle_invalidmap.js
 devtools/client/webconsole/test/browser/test-autocomplete-mapped.js
 devtools/client/webconsole/test/browser/test-autocomplete-mapped.src.js
+devtools/client/inspector/markup/test/shadowdom_open_debugger.min.js
+devtools/client/webconsole/test/browser/test-click-function-to-source*.js
+devtools/client/webconsole/test/browser/test-external-script-errors.js
+devtools/client/webconsole/test/browser/test-message-categories-canvas-css.js
+devtools/client/webconsole/test/browser/test-message-categories-empty-getelementbyid.js
+devtools/client/webconsole/test/browser/test-sourcemap*.js
 devtools/server/tests/xpcshell/setBreakpoint*
 devtools/server/tests/xpcshell/sourcemapped.js
 
