--- a/taskcluster/ci/test/browsertime-desktop.yml
+++ b/taskcluster/ci/test/browsertime-desktop.yml
@@ -83,7 +83,7 @@ browsertime-tp6:
                         firefox:
                             by-test-platform:
                                 windows.*-32.*: []
-                                .*64.*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
+                                .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
                                 default: []
                         default: []
         treeherder-symbol: Btime(tp6)
@@ -149,7 +149,7 @@ browsertime-responsiveness:
             firefox:
                 by-test-platform:
                     windows.*-32.*: []
-                    .*64.*shippable-qr/.*: [trunk]
+                    .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk]
                     default: []
             default: []
     tier:
@@ -195,7 +195,7 @@ browsertime-tp6-essential:
                     by-test-platform:
                         windows.*-32.*: []
                         macosx1100.*shippable.*: [mozilla-central, mozilla-beta]
-                        .*64.*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
+                        .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
                         default: []
                 default: []
         tier:
@@ -223,6 +223,15 @@ browsertime-tp6-bytecode:
             - twitter
             - wikipedia
             - yahoo-mail
+    run-on-projects:
+        by-app:
+            firefox:
+                by-test-platform:
+                    windows.*-32.*: []
+                    macosx1100.*shippable.*: [mozilla-central, mozilla-beta]
+                    .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
+                    default: []
+            default: []
     mozharness:
         extra-options:
             by-test-platform:
@@ -317,7 +326,8 @@ browsertime-benchmark:
                     firefox:
                         by-test-platform:
                             windows.*-32.*: []
-                            .*64.*shippable-qr/.*: [trunk, mozilla-release]
+                            .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk, mozilla-release]
+                            .*nightlyasrelease.*: [autoland]
                             default: []
                     default: []
             unity-webgl:
@@ -325,7 +335,16 @@ browsertime-benchmark:
                     firefox:
                         by-test-platform:
                             windows.*-32.*: []
-                            .*64.*shippable-qr/.*: [trunk, mozilla-release]
+                            .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk, mozilla-release]
+                            default: []
+                    default: []
+            speedometer:
+                by-app:
+                    firefox:
+                        by-test-platform:
+                            windows.*-32.*: []
+                            .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
+                            .*nightlyasrelease.*: [autoland]
                             default: []
                     default: []
             default:
@@ -333,7 +352,7 @@ browsertime-benchmark:
                     firefox:
                         by-test-platform:
                             windows.*-32.*: []
-                            .*64.*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
+                            .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
                             default: []
                     default: []
     max-run-time:
@@ -372,7 +391,7 @@ browsertime-benchmark-wasm:
             firefox:
                 by-test-platform:
                     windows.*-32.*: []
-                    .*64.*shippable-qr/.*: [mozilla-central, mozilla-release]
+                    .*64(?!.*nightlyasrelease).*shippable-qr/.*: [mozilla-central, mozilla-release]
                     default: []
             default: []
     max-run-time:
@@ -399,7 +418,7 @@ browsertime-youtube-playback:
     run-on-projects:
         by-test-platform:
             windows.*-32.*: []
-            .*64.*shippable-qr/.*: [mozilla-central, mozilla-release]
+            .*64(?!.*nightlyasrelease).*shippable-qr/.*: [mozilla-central, mozilla-release]
             default: []
     tier: 2
     limit-platforms:
@@ -594,7 +613,7 @@ browsertime-custom:
     run-on-projects:
         by-test-platform:
             windows.*-32.*: []
-            .*64.*shippable-qr/.*: [mozilla-central]
+            .*64(?!.*nightlyasrelease).*shippable-qr/.*: [mozilla-central]
             default: []
     tier: 1
     treeherder-symbol: Btime(ps)
@@ -613,7 +632,7 @@ browsertime-first-install:
     run-on-projects:
         by-test-platform:
             windows.*-32.*: []
-            .*64.*shippable-qr/.*: [trunk]
+            .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk]
             default: []
     tier: 1
     treeherder-symbol: Btime(welcome)
@@ -629,7 +648,8 @@ browsertime-grandprix:
             firefox:
                 by-test-platform:
                     windows.*-32.*: []
-                    .*64.*shippable-qr/.*: [autoland, mozilla-central]
+                    .*64(?!.*nightlyasrelease).*shippable-qr/.*: [autoland, mozilla-central]
+                    .*nightlyasrelease.*: [autoland]
                     default: []
             default: []
     tier: 3
