Bug 1540883 - block a few problematic DLLs r=gsvelto
Differential Revision: https://phabricator.services.mozilla.com/D174502

UltraBlame original commit: bd028b83ef49c923964ff675bf53a51e967cc72b

--- a/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
+++ b/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
@@ -310,6 +310,12 @@ BROWSER_PROCESS += [
 
     
     DllBlocklistEntry("explorerpatcher.amd64.dll", ALL_VERSIONS),
+
+    
+    DllBlocklistEntry("ss3devprops.dll", ALL_VERSIONS),
+
+    
+    DllBlocklistEntry("audiodevprops2.dll", (2, 6, 14, 0)),
 ]
 
 CHILD_PROCESSES += [
