Bug 1826392 - Block GoogleDesktopNetwork3.dll from Utility r=gstoll
Differential Revision: https://phabricator.services.mozilla.com/D175380

UltraBlame original commit: b821cac9ad438aa9d62d451e446e8e22a6c34cde

--- a/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
+++ b/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
@@ -48,7 +48,13 @@ ALL_PROCESSES += [
 
     
     
-    DllBlocklistEntry("googledesktopnetwork3.dll", UNVERSIONED),
+    
+    
+    
+    
+    
+    
+    DllBlocklistEntry("googledesktopnetwork3.dll", ALL_VERSIONS),
 
     
     DllBlocklistEntry("rdolib.dll", (6,0,88,4)),
