Bug 1826393 - Block kwsui64.dll/ks3rdhmpg.dll/ipseng32.dll/ipseng64.dll r=gstoll
Differential Revision: https://phabricator.services.mozilla.com/D176415

UltraBlame original commit: 8cc2ecf09f3a2de99d9da04714e0a2998009cef8

--- a/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
+++ b/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
@@ -390,6 +390,12 @@ SOCKET_PROCESSES_TESTS += [
 UTILITY_PROCESSES += [
     
     DllBlocklistEntry("cyinjct.dll", ALL_VERSIONS),
+
+    
+    DllBlocklistEntry("ipseng64.dll", ALL_VERSIONS),
+    DllBlocklistEntry("ipseng32.dll", ALL_VERSIONS),
+    DllBlocklistEntry("ks3rdhmpg.dll", ALL_VERSIONS),
+    DllBlocklistEntry("kwsui64.dll", ALL_VERSIONS),
 ]
 
 UTILITY_PROCESSES_TESTS += [
