Bug 1830950 - Block various anti-virus DLLs in GMP processes. r=gstoll
Similar to the utility process in bug 1826393, we are seeing
crashes in the plugin process due to certain anti-virus apps such
as Symantec. This causes us to fail to load the Widevine plugin
with ERROR_MOD_NOT_FOUND.

This patch adds support to add blocklist entries for the GMPlugin
process type, and mirrors the entries added for the utility
process. It also adds a test case to verify the blocklist
integration.

Differential Revision: https://phabricator.services.mozilla.com/D176942

UltraBlame original commit: 82b9dcbe0f17f25b4297296775e540ef4a7af0f7

--- a/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
+++ b/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
@@ -33,6 +33,7 @@
 
 
 
+
 ALL_PROCESSES += [
     
     DllBlocklistEntry("npffaddon.dll", ALL_VERSIONS),
@@ -403,3 +404,15 @@ UTILITY_PROCESSES_TESTS += [
     DllBlocklistEntry("testdllblocklist_utilityprocessonly.dll", ALL_VERSIONS),
 ]
 
+GMPLUGIN_PROCESSES += [
+    
+    DllBlocklistEntry("ipseng64.dll", ALL_VERSIONS),
+    DllBlocklistEntry("ipseng32.dll", ALL_VERSIONS),
+    DllBlocklistEntry("ks3rdhmpg.dll", ALL_VERSIONS),
+    DllBlocklistEntry("kwsui64.dll", ALL_VERSIONS),
+]
+
+GMPLUGIN_PROCESSES_TESTS += [
+    
+    DllBlocklistEntry("testdllblocklist_gmpluginprocessonly.dll", ALL_VERSIONS),
+]
