Bug 1933323 - migrate web-platform-tests from macosx 10.15 -> 14.70. r=aryx
Differential Revision: https://phabricator.services.mozilla.com/D230180

UltraBlame original commit: 304405212b82eb169e0aa656a732d11b3ba1ec40

--- a/taskcluster/kinds/test/test-sets.yml
+++ b/taskcluster/kinds/test/test-sets.yml
@@ -33,6 +33,16 @@ web-platform-tests:
     - web-platform-tests-webcodecs
     - web-platform-tests-eme
 
+web-platform-tests-1015:
+    - web-platform-tests-crashtest
+    - web-platform-tests-privatebrowsing
+    - web-platform-tests-print-reftest
+    - web-platform-tests-reftest
+    - web-platform-tests-wdspec
+    - web-platform-tests-canvas
+    - web-platform-tests-webcodecs
+    - web-platform-tests-eme
+
 web-platform-tests-backlog:
     - web-platform-tests-backlog
     - web-platform-tests-reftest-backlog
@@ -401,6 +411,9 @@ macosx1100-aarch64-qr-tests:
     - cppunittest
     - mochitest-media
 
+macosx1470-64-tests:
+    - web-platform-tests
+
 macosx1015-64-qr-tests:
     - cppunittest
     - crashtest
@@ -520,6 +533,7 @@ android-hw-browsertime:
     - browsertime-benchmark-motionmark-1-3
     - browsertime-benchmark-jetstream2
     - browsertime-video-playback-latency-mobile
+    - browsertime-youtube-playback-power-mobile
 
 android-hw-browsertime-profiling:
     - browsertime-tp6m-profiling
@@ -527,3 +541,6 @@ android-hw-browsertime-profiling:
 android-hw-speedometer-tests:
     - browsertime-benchmark-speedometer-mobile
     - browsertime-benchmark-speedometer3-mobile
+
+android-hw-power-tests:
+    - browsertime-youtube-playback-power-mobile
