Bug 1933288 part 7: Add a second pass to 'stretch' WPTs to test with "box-sizing:border-box", to validate that it doesn't impact the sizing. r=TYLin
box-sizing:border-box shouldn't impact the sizing because we're growing to fill
the containing block, which means we end up with the same overall size in the
relevant axis regardless of whether we're stretching the border-box or the
content-box.

(There's one special case in these tests where it does actually matter, but
not in a way that's really based on how 'stretch' itself is resolved; so I
simply opt that subtest out of this second pass.)

Differential Revision: https://phabricator.services.mozilla.com/D230297

UltraBlame original commit: 7892bfc41933d4fe8b8ca6596f4cb4e50161e4e1

--- a/testing/web-platform/meta/css/css-sizing/stretch/stretch-alias-max-block-size-001.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-sizing/stretch/stretch-alias-max-block-size-001.tentative.html.ini
@@ -1,4 +1,4 @@
-[stretch-max-block-size-001.html]
+[stretch-alias-max-block-size-001.tentative.html]
   [[data-expected-height\] 1]
     expected: FAIL
 
