--- a/testing/web-platform/meta/css/css-sizing/stretch/stretch-alias-min-inline-size-001.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-sizing/stretch/stretch-alias-min-inline-size-001.tentative.html.ini
@@ -1,4 +1,4 @@
-[stretch-min-inline-size-001.html]
+[stretch-alias-min-inline-size-001.tentative.html]
   [[data-expected-width\] 1]
     expected: FAIL
 
