--- a/testing/web-platform/meta/css/css-sizing/stretch/stretch-alias-inline-size-001.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-sizing/stretch/stretch-alias-inline-size-001.tentative.html.ini
@@ -1,7 +1,4 @@
-[stretch-min-inline-size-001.html]
-  [[data-expected-width\] 1]
-    expected: FAIL
-
+[stretch-alias-inline-size-001.tentative.html]
   [[data-expected-width\] 2]
     expected: FAIL
 
@@ -17,9 +14,6 @@
   [[data-expected-width\] 6]
     expected: FAIL
 
-  [[data-expected-width\] 7]
-    expected: FAIL
-
   [[data-expected-width\] 8]
     expected: FAIL
 
@@ -27,9 +21,6 @@
     expected: FAIL
 
   [[data-expected-width\] 10]
-    expected: FAIL
-
-  [[data-expected-width\] 13]
     expected: FAIL
 
   [[data-expected-width\] 14]
@@ -44,19 +35,7 @@
   [[data-expected-width\] 19]
     expected: FAIL
 
-  [[data-expected-width\] 20]
-    expected: FAIL
-
   [[data-expected-width\] 21]
-    expected: FAIL
-
-  [[data-expected-width\] 22]
-    expected: FAIL
-
-  [[data-expected-width\] 23]
-    expected: FAIL
-
-  [[data-expected-width\] 24]
     expected: FAIL
 
   [[data-expected-width\] 25]
@@ -74,9 +53,6 @@
   [[data-expected-width\] 29]
     expected: FAIL
 
-  [[data-expected-width\] 30]
-    expected: FAIL
-
   [[data-expected-width\] 31]
     expected: FAIL
 
@@ -84,9 +60,6 @@
     expected: FAIL
 
   [[data-expected-width\] 33]
-    expected: FAIL
-
-  [[data-expected-width\] 36]
     expected: FAIL
 
   [[data-expected-width\] 37]
@@ -101,14 +74,5 @@
   [[data-expected-width\] 42]
     expected: FAIL
 
-  [[data-expected-width\] 43]
-    expected: FAIL
-
   [[data-expected-width\] 44]
-    expected: FAIL
-
-  [[data-expected-width\] 45]
-    expected: FAIL
-
-  [[data-expected-width\] 46]
     expected: FAIL
