--- a/testing/web-platform/meta/css/css-sizing/stretch/stretch-alias-min-block-size-001.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-sizing/stretch/stretch-alias-min-block-size-001.tentative.html.ini
@@ -1,4 +1,4 @@
-[stretch-block-size-001.html]
+[stretch-alias-min-block-size-001.tentative.html]
   [[data-expected-height\] 1]
     expected: FAIL
 
@@ -17,6 +17,9 @@
   [[data-expected-height\] 6]
     expected: FAIL
 
+  [[data-expected-height\] 7]
+    expected: FAIL
+
   [[data-expected-height\] 8]
     expected: FAIL
 
@@ -24,6 +27,9 @@
     expected: FAIL
 
   [[data-expected-height\] 10]
+    expected: FAIL
+
+  [[data-expected-height\] 13]
     expected: FAIL
 
   [[data-expected-height\] 14]
@@ -35,10 +41,19 @@
   [[data-expected-height\] 16]
     expected: FAIL
 
+  [[data-expected-height\] 19]
+    expected: FAIL
+
   [[data-expected-height\] 20]
     expected: FAIL
 
   [[data-expected-height\] 21]
+    expected: FAIL
+
+  [[data-expected-height\] 22]
+    expected: FAIL
+
+  [[data-expected-height\] 23]
     expected: FAIL
 
   [[data-expected-height\] 24]
@@ -59,6 +74,9 @@
   [[data-expected-height\] 29]
     expected: FAIL
 
+  [[data-expected-height\] 30]
+    expected: FAIL
+
   [[data-expected-height\] 31]
     expected: FAIL
 
@@ -66,6 +84,9 @@
     expected: FAIL
 
   [[data-expected-height\] 33]
+    expected: FAIL
+
+  [[data-expected-height\] 36]
     expected: FAIL
 
   [[data-expected-height\] 37]
@@ -77,8 +98,17 @@
   [[data-expected-height\] 39]
     expected: FAIL
 
+  [[data-expected-height\] 42]
+    expected: FAIL
+
   [[data-expected-height\] 43]
     expected: FAIL
 
   [[data-expected-height\] 44]
+    expected: FAIL
+
+  [[data-expected-height\] 45]
+    expected: FAIL
+
+  [[data-expected-height\] 46]
     expected: FAIL
