--- a/testing/web-platform/meta/css/css-sizing/stretch/stretch-inline-size-001.html.ini
+++ b/testing/web-platform/meta/css/css-sizing/stretch/stretch-inline-size-001.html.ini
@@ -37,3 +37,42 @@
 
   [[data-expected-width\] 21]
     expected: FAIL
+
+  [[data-expected-width\] 25]
+    expected: FAIL
+
+  [[data-expected-width\] 26]
+    expected: FAIL
+
+  [[data-expected-width\] 27]
+    expected: FAIL
+
+  [[data-expected-width\] 28]
+    expected: FAIL
+
+  [[data-expected-width\] 29]
+    expected: FAIL
+
+  [[data-expected-width\] 31]
+    expected: FAIL
+
+  [[data-expected-width\] 32]
+    expected: FAIL
+
+  [[data-expected-width\] 33]
+    expected: FAIL
+
+  [[data-expected-width\] 37]
+    expected: FAIL
+
+  [[data-expected-width\] 38]
+    expected: FAIL
+
+  [[data-expected-width\] 39]
+    expected: FAIL
+
+  [[data-expected-width\] 42]
+    expected: FAIL
+
+  [[data-expected-width\] 44]
+    expected: FAIL
