--- a/testing/web-platform/meta/css/css-sizing/stretch/stretch-min-block-size-001.html.ini
+++ b/testing/web-platform/meta/css/css-sizing/stretch/stretch-min-block-size-001.html.ini
@@ -55,3 +55,60 @@
 
   [[data-expected-height\] 23]
     expected: FAIL
+
+  [[data-expected-height\] 24]
+    expected: FAIL
+
+  [[data-expected-height\] 25]
+    expected: FAIL
+
+  [[data-expected-height\] 26]
+    expected: FAIL
+
+  [[data-expected-height\] 27]
+    expected: FAIL
+
+  [[data-expected-height\] 28]
+    expected: FAIL
+
+  [[data-expected-height\] 29]
+    expected: FAIL
+
+  [[data-expected-height\] 30]
+    expected: FAIL
+
+  [[data-expected-height\] 31]
+    expected: FAIL
+
+  [[data-expected-height\] 32]
+    expected: FAIL
+
+  [[data-expected-height\] 33]
+    expected: FAIL
+
+  [[data-expected-height\] 36]
+    expected: FAIL
+
+  [[data-expected-height\] 37]
+    expected: FAIL
+
+  [[data-expected-height\] 38]
+    expected: FAIL
+
+  [[data-expected-height\] 39]
+    expected: FAIL
+
+  [[data-expected-height\] 42]
+    expected: FAIL
+
+  [[data-expected-height\] 43]
+    expected: FAIL
+
+  [[data-expected-height\] 44]
+    expected: FAIL
+
+  [[data-expected-height\] 45]
+    expected: FAIL
+
+  [[data-expected-height\] 46]
+    expected: FAIL
