Bug 1933492 - chore(rust): audit `metal` 0.29.0 → 0.30.0 r=supply-chain-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D230306

UltraBlame original commit: fb7a853f9e21f9b80a4c2bcb789ab787528b06bb

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -3099,6 +3099,11 @@ who = "Erich Gubler <erichdongubler@gmail.com>"
 criteria = "safe-to-deploy"
 delta = "0.28.0 -> 0.29.0"
 
+[[audits.metal]]
+who = "Erich Gubler <erichdongubler@gmail.com>"
+criteria = "safe-to-deploy"
+delta = "0.29.0 -> 0.30.0"
+
 [[audits.midir]]
 who = "Bobby Holley <bobbyholley@gmail.com>"
 criteria = "safe-to-deploy"
