Bug 1905706 - Trusted Types support for the src/innerText/textContent/text IDL attributes of HTMLScriptElement. r=smaug
This only does the minimal change to handle trusted types as arguments
of attribute setter/getter. See bug 1928932 for follow-up checks.

Differential Revision: https://phabricator.services.mozilla.com/D227513

UltraBlame original commit: 8011aaeddfc398c9a42769197fee8d1e0a87f304

--- a/testing/web-platform/meta/trusted-types/block-text-node-insertion-into-script-element.html.ini
+++ b/testing/web-platform/meta/trusted-types/block-text-node-insertion-into-script-element.html.ini
@@ -1,6 +1,6 @@
 [block-text-node-insertion-into-script-element.html]
   expected:
-    if not fission and (os == "linux") and debug: [ERROR, CRASH, ]
+    if not fission and (os == "linux") and debug: [ERROR, CRASH]
     ERROR
   [Regression test: Bypass via insertAdjacentText, initial comment.]
     expected: FAIL
@@ -8,20 +8,11 @@
   [Regression test: Bypass via appendChild into off-document script elementscript]
     expected: FAIL
 
-  [Prep for subsequent tests: Clear SPV event queue.]
-    expected: TIMEOUT
-
   [Spot tests around script + innerHTML interaction.]
-    expected: NOTRUN
-
-  [Prep for subsequent tests: Create default policy.]
-    expected: NOTRUN
+    expected: FAIL
 
   [Test that default policy applies. script]
-    expected: NOTRUN
+    expected: FAIL
 
   [Test a failing default policy. script]
-    expected: NOTRUN
-
-  [Spot tests around script + innerHTML interaction with default policy.]
-    expected: NOTRUN
+    expected: FAIL
