--- a/testing/web-platform/meta/trusted-types/block-text-node-insertion-into-svg-script-element.html.ini
+++ b/testing/web-platform/meta/trusted-types/block-text-node-insertion-into-svg-script-element.html.ini
@@ -8,20 +8,14 @@
   [Regression test: Bypass via appendChild into off-document script elementsvg:script]
     expected: FAIL
 
-  [Prep for subsequent tests: Clear SPV event queue.]
-    expected: TIMEOUT
-
   [Spot tests around script + innerHTML interaction.]
-    expected: NOTRUN
-
-  [Prep for subsequent tests: Create default policy.]
-    expected: NOTRUN
+    expected: FAIL
 
   [Test that default policy applies. svg:script]
-    expected: NOTRUN
+    expected: FAIL
 
   [Test a failing default policy. svg:script]
-    expected: NOTRUN
+    expected: TIMEOUT
 
   [Spot tests around script + innerHTML interaction with default policy.]
     expected: NOTRUN
